--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
+    "antd": "^4.15.5",
     "babel": "^6.23.0",
     "classnames": "^2.3.1",
     "eslint": "^7.26.0",
