--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.15.5",
     "babel": "^6.23.0",
     "classnames": "^2.3.1",
+    "date-fns": "^2.21.3",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -26,7 +27,7 @@
     "eslint-plugin-typescript": "^0.14.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
-    "nanoid": "^3.1.22",
+    "nanoid": "^3.1.23",
     "node-sass": "^5.0.0",
     "prettier": "^2.3.0",
     "react": "^17.0.2",
