--- a/.eslintrc
+++ b/.eslintrc
@@ -45,6 +45,7 @@
         }
       ],
       "react/no-array-index-key": "off",
-      "default-case": "off"
+      "default-case": "off",
+      "react/require-default-props": "off",
     }
   }
