--- a/.eslintrc
+++ b/.eslintrc
@@ -48,5 +48,6 @@
       "default-case": "off",
       "react/require-default-props": "off",
       "array-callback-return": "off",
+      "no-plusplus": "off"
     }
   }
